# mod-guildhouse-v2

./: CMakeLists.txt  README.md  guildhouse_v2_loader.cpp  guildhouse_v2_script.cpp
conf/: guildhouse.conf.dist  mod_guildhouse_v2.conf.dist
data/sql/db-characters/: 0001_guildhouse.sql
data/sql/db-world/: 0001_guildhouse.sql  0001_guildhouse_catalog.sql  0002_guildhouse_npc.sql  0003_guildhouse_locations.sql  0004_catalog_contents.sql  0005_location_contents.sql  2026_06_18_guildhouse_spawns.sql  README.md
src/: Common.h  GuildHouseBroker.cpp  GuildHouseBroker.h  GuildHouseBuilderNpc.cpp  GuildHouseBuilderNpc.h  GuildHouseCatalogMgr.cpp  GuildHouseCatalogMgr.h  GuildHouseCommands.cpp  GuildHouseCommands.h  GuildHouseConfig.cpp  GuildHouseConfig.h  GuildHouseCpc.h  GuildHouseDefines.cpp  GuildHouseDefines.h  GuildHouseInstanceMgr.cpp  GuildHouseInstanceMgr.h  GuildHouseMgr.cpp  GuildHouseMgr.h  GuildHouseModule.cpp  GuildHouseNpc.cpp  GuildHouseNpc.h  GuildHousePhaseMgr.cpp  GuildHousePhaseMgr.h  GuildHousePlayerScript.cpp  GuildHouseSalesman.cpp  GuildHouseSalesman.h  GuildHouseSpawner.cpp  GuildHouseSpawner.h  GuildHouseTypes.h  GuildHouseUtil.cpp  GuildHouseUtil.h  GuildHouseWorld.cpp  GuildHouseWorldScript.cpp  GuildHouseWorldScript.h  guildhouse.h  loader.cpp  loader.h  mod_guildhouse.cpp  mod_guildhouse.h
